# mcp-python-skeleton

./: README.md  pyproject.toml  tox.ini
mcpskeleton/: __main__.py
mcpskeleton/daemon/: __init__.py  auth.py  dependencies.py  dev-prefixes.txt  fastapi_webapp.py  health_checks.py  implementation.py  routes.py
mcpskeleton/mcp/: __init__.py  mcp_tools.py
mcpskeleton/tests/: main_entrypoint_test.py
